--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxek-Ls4juZ8IEmrw31dxNTIwZJUYBUJIEt0opULPtzsodPTyfR-NWKlNl0MtfFF0I/exec';
+    const scriptURL = 'https://docs.google.com/spreadsheets/d/1R9FKVYAnuBCWth1dTBbbUNP6B_W_utjpO754SW0Xbeg/edit?gid=0#gid=0';
     const form = document.getElementById('rsvp-form');
 
     form.addEventListener('submit', e => {
