--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <form
             action="https://script.google.com/macros/s/AKfycbzvhS6C6bYFI3Zh2aTdPSDgXfzSoVxXbJxk9C_OirXccMASS4TI-626fWSxPkwVe8fP/exec"
             method="POST"
-            target="hidden_iframe"
-            onsubmit="alert('✅ 感谢填写，我们已记录您的回复！'); this.reset();"
+            onsubmit="alert('✅ 感谢填写，我们已记录您的回复！');"
             class="flex flex-col gap-4"
     >
+
 
     <input type="text" name="name" placeholder="姓名" required
                class="border border-gray-300 rounded-lg p-3 w-full" />
