--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             action="https://script.google.com/macros/s/AKfycbzvhS6C6bYFI3Zh2aTdPSDgXfzSoVxXbJxk9C_OirXccMASS4TI-626fWSxPkwVe8fP/exec"
             method="POST"
             onsubmit="alert('✅ 感谢填写，我们已记录您的回复！');"
+            onsubmit="setTimeout(() => window.location.href='thankyou.html', 500);"
             class="flex flex-col gap-4"
     >
 
