--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>共享夏日报名</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-yellow-50 flex flex-col items-center justify-center min-h-screen p-6">
+<body
+        class="min-h-screen flex items-center justify-center"
+        style="background-image: url('summer2025.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin: 0;"
+>
+
 <div class="max-w-xl w-full bg-white rounded-2xl shadow-lg p-8">
     <h1 class="text-4xl font-bold text-yellow-600 mb-6 text-center">共享夏日</h1>
     <p class="text-center text-gray-700 mb-2">🕔 时间：2025 年 07 月 19 日 下午 5:30 PM</p>
