--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="bg-yellow-50 relative min-h-screen flex flex-col items-center justify-start">
 
 <!-- ✅ 顶部横幅图 -->
-<img src="summer2025.jpeg" alt="顶部图片"
-     class="w-full max-h-48 object-cover" />
+<img src="WechatIMG758.png" alt="顶部图片"
+     class="w-full h-80 object-cover" />
 
 <!-- ✅ 左侧图片 -->
 <img src="https://yourdomain.com/left-decor.png" alt="左图"
