--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <img src="WechatIMG758.png" alt="顶部图片"
      class="w-full h-80 object-cover" />
 
-<!-- ✅ 左侧图片 -->
-<img src="https://yourdomain.com/left-decor.png" alt="左图"
-     class="hidden md:block absolute top-1/3 left-0 w-32 opacity-70" />
+<!--&lt;!&ndash; ✅ 左侧图片 &ndash;&gt;-->
+<!--<img src="summer2025.jpeg" alt="左图"-->
+<!--     class="hidden md:block absolute top-1/3 left-0 w-32 opacity-70" />-->
 
-<!-- ✅ 右侧图片 -->
-<img src="https://yourdomain.com/right-decor.png" alt="右图"
-     class="hidden md:block absolute top-1/3 right-0 w-32 opacity-70" />
+<!--&lt;!&ndash; ✅ 右侧图片 &ndash;&gt;-->
+<!--<img src="https://yourdomain.com/right-decor.png" alt="右图"-->
+<!--     class="hidden md:block absolute top-1/3 right-0 w-32 opacity-70" />-->
+
+
+
 
 <!-- ✅ 主内容容器 -->
 <div class="w-full max-w-xl bg-white bg-opacity-95 rounded-2xl shadow-lg p-8 mt-6 z-10 relative">
