--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <p class="text-center text-lg font-semibold mb-6">请填写以下信息 🙌</p>
 
     <form
-            action="https://script.google.com/macros/s/AKfycbziAfmD7z-Yg2nrkrVzgsBMu5DOM1dkHlK_JbT0mZlK722Uq3Tq7qEGE8DWWAVgT4i-/exec"
+            action="https://script.google.com/macros/s/AKfycbzvhS6C6bYFI3Zh2aTdPSDgXfzSoVxXbJxk9C_OirXccMASS4TI-626fWSxPkwVe8fP/exec
+"
             method="POST"
             onsubmit="alert('✅ 感谢填写，我们已记录您的回复！');"
             class="flex flex-col gap-4"
