--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <p class="text-center text-gray-700 mb-2">🕔 时间：2025 年 07 月 19 日 下午 5:30 PM</p>
     <p class="text-center text-gray-700 mb-6">📍 地点：16152 Gale Ave, Hacienda Heights, CA, 91745 (二楼)</p>
     <p class="text-center text-lg font-semibold mb-6">请填写以下信息 🙌</p>
+    <p class="mt-6 text-center text-red-600 text-sm font-semibold">
+        🔔 温馨提醒：当天参加活动的朋友请穿着**运动鞋**，以便参与活动哦！
+    </p>
 
     <form
             action="https://script.google.com/macros/s/AKfycbz4Xsd01ubyH5GCfreeGUwYbSxJjLpm8nOGo9JxQhY2vj7JLAaKFDa4nLGcT1qXqUDh/exec
@@ -38,11 +41,10 @@
 
         <select name="age" required class="border border-gray-300 rounded-lg p-3 w-full">
             <option value="" disabled selected>年龄范围</option>
-            <option value="12岁以下">12岁以下</option>
-            <option value="13-18岁">13-18岁</option>
-            <option value="19-30岁">19-30岁</option>
-            <option value="31-50岁">31-50岁</option>
-            <option value="51岁以上">51岁以上</option>
+            <option value="18-25岁">18-25岁</option>
+            <option value="26-30岁">26-30岁</option>
+            <option value="31-35岁">31-35岁</option>
+            <option value="36-40岁">36-40岁</option>
         </select>
 
         <select name="gender" required class="border border-gray-300 rounded-lg p-3 w-full">
@@ -57,7 +59,7 @@
         </button>
     </form>
 
-    <p class="mt-8 text-center text-sm text-gray-500">📞 联系方式：626-253-5600</p>
+    <p class="mt-8 text-center text-sm text-gray-500">📧需要咨询，请email至：gracedesign7000@gmail.com</p>
 </div>
 </body>
 </html>
