--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <!-- ✅ 主内容容器 -->
 <div class="w-full max-w-xl bg-white bg-opacity-95 rounded-2xl shadow-lg p-8 mt-6 z-10 relative">
-    <h1 class="text-4xl font-bold text-yellow-600 mb-6 text-center">共享夏日</h1>
+    <h1 class="text-4xl font-bold text-yellow-600 mb-6 text-center">🏖️共享夏日🏖️
+    </h1>
     <p class="text-center text-gray-700 mb-2">🕔 时间：2025 年 07 月 19 日 下午 5:30 PM</p>
     <p class="text-center text-gray-700 mb-6">📍 地点：16152 Gale Ave, Hacienda Heights, CA, 91745 (二楼)</p>
     <p class="text-center text-lg font-semibold mb-6">请填写以下信息 🙌</p>
