--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
             class="flex flex-col gap-4"
     >
 
-    <input type="text" name="name" placeholder="姓名" required
+        <input type="text" id="name_cn" name="name_cn" placeholder="中文名字"
                class="border border-gray-300 rounded-lg p-3 w-full" />
+
+        <input type="text" id="name_en" name="name_en" placeholder="英文名字"
+               class="border border-gray-300 rounded-lg p-3 w-full" />
+
+
 
         <input type="text" name="phone" placeholder="电话号码" required
                class="border border-gray-300 rounded-lg p-3 w-full" />
