--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <!-- 🍂 主内容容器 -->
 <div class="w-full max-w-xl bg-white bg-opacity-95 rounded-2xl shadow-lg p-8 mt-6 z-10 relative">
-    <h1 class="text-4xl font-bold text-orange-600 mb-6 text-center">🦃 感恩相聚·共享恩典 🍂</h1>
-    <p class="text-center text-gray-700 mb-2">🕔 时间：2025 年 11 月 23 日（SUN）下午 5:30 PM</p>
-    <p class="text-center text-gray-700 mb-6">📍 地点：16152 Gale Ave, Hacienda Heights, CA（二楼）</p>
+    <h1 class="text-4xl font-bold text-orange-600 mb-6 text-center">🦃 共享恩典聚餐 🍂</h1>
+    <p class="text-center text-gray-700 mb-2">🕔 时间：2025 年 11 月 23 日（SUN）5:30 PM</p>
+    <p class="text-center text-gray-700 mb-6">📍 地点：16152 Gale Ave, Hacienda Heights, CA</p>
     <p class="text-center text-lg font-semibold mb-6 text-brown-700">
         请填写以下信息，一起欢庆感恩节 🙌
     </p>
@@ -35,6 +35,9 @@
                class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400" />
 
         <input type="text" id="name_en" name="name_en" placeholder="英文名字"
+               class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400" />
+
+        <input type="email" id="email" name="email" placeholder="Email" required
                class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400" />
 
         <select name="age" required class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400">
