--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <input type="text" id="name_en" name="name_en" placeholder="英文名字"
                class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400" />
 
-        <input type="email" id="email" name="email" placeholder="Email" required
+        <input type="email" id="email" name="email" placeholder="Email（聚会前我们会发邮件提醒您😊）" required
                class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400" />
 
         <select name="age" required class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400">
