--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <input type="text" id="name_en" name="name_en" placeholder="英文名字"
                class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400" />
 
-        <input type="email" id="email" name="email" placeholder="Email（聚会前我们会发邮件提醒您😊）" required
+        <input type="text" id="wechat" name="wechat" placeholder="Email（聚会前我们会发邮件提醒您😊）" required
                class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400" />
 
         <select name="age" required class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400">
@@ -46,7 +46,7 @@
             <option value="26-30岁">26-30岁</option>
             <option value="31-35岁">31-35岁</option>
             <option value="36-40岁">36-40岁</option>
-            <option value="40岁以上">40岁以上</option>
+
         </select>
 
         <select name="gender" required class="border border-orange-200 rounded-lg p-3 w-full focus:ring-2 focus:ring-orange-400">
